2002-05-02  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-charset.c (main): Gnerate the multibyte charsets without
	the need for using external .dat files. Also attempt to condense
	the charset-map table a bit.

2002-04-30  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Change version info to 0.9.0

	* gmime-charset.c (main): Instead of converting the multibyte
	charset tables to UTF-8 and then using the unicode functions to
	convert UTF-8 to UCS4, just convert directly to UCS4. Also fixed a
	type-o in the Big5.dat filename (it should be Big5.dat not
	Big5.data).

2002-04-25  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-utils.c (g_mime_utils_base64_decode_step): Only backtrack
	if we have output data.

2002-04-23  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-parser.c: Oops, fix the patch from HEAD to compile.

	* gmime-utils.c (rfc2047_encode_phrase): Fixed a small memory
	leak. Thanks to the Pan guys for findings this.

2002-04-21  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-parser.c: Pull some fixes back from HEAD.

2002-04-20  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-part.c (g_mime_part_encoding_from_string): Added support
	for the binary encoding.
	(g_mime_part_encoding_to_string): Same.

	* gmime-utils.h: Added GMIME_PART_ENCODING_BINARY.

2002-04-19  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-parser.c: New implementation, backported from my glib2
	version of gmime (which is still a work-in-progress).

	* old-parser.c: Old version of gmime-parser.c - keeping it around
	in for reference.
	
	* gmime-utils.c (g_mime_utils_header_fold): If we find a \t, that
	is a good place to wrap since odds are that this is where the
	previous mailer had wrapped the header.

2002-04-19  Jeffrey Stedfast  <fejj@ximian.com>

	* pan-mime-parser.c (g_mime_parser_construct_message): No longer
	takes a 'preserve_headers' argument.

	* gmime-parser.c (g_mime_parser_construct_message): No longer
	takes a 'preserve_headers' argument.
